MB-15075 Call btree_init_from_bid() instead of replacing root_bid

- In Single KVS mode, if dirty root node for seq tree exists, root
BID for the tree in FDB handle structure is simply replaced.

- However, it does not update corresponding B-tree info so that
various corruptions occur. To address this issue, we need to call
btree_init_from_bid instead of setting root_bid.

Change-Id: Ie09a5efca4312ddf7cdc534602abf969e7861e0b